2007-05-29  Darin Adler  <darin@apple.com>

        Reviewed by Sam.

        - a clean-up pass on form-related aspects of the recent JSHTMLElement patch

        * bindings/js/JSHTMLElementCustom.cpp: (WebCore::JSHTMLElement::pushEventHandlerScope):
        Replace the call to formForEventHandlerScope() with a call to the new form() function.
        And removed the now-uneeded code to search for a form ancestor.

        * html/HTMLElement.h: Added a general-purpose form() function. The intent is to return
        the form ancestor if any, but return the associated form for a form control, which isn't
        always an ancestor of the control. To keep form() efficient for form controls, it's an
        inline that calls a virtual, allowing a derived class to override it with an inline.
        This replaces formForEventHandlerScope(). Also added findFormAncestor() to use here and
        to replace the multiple loops found elsewhere to search for the nearest form ancestor.
        * html/HTMLElement.cpp:
        (WebCore::HTMLElement::findFormAncestor): Added.
        (WebCore::HTMLElement::virtualForm): Added. Calls findFormAncestor().

        * html/HTMLGenericFormElement.h: Suggested name change to HTMLFormControlElement.
        Removed the confusing getForm() function, which is superceded by findFormAncestor.
        Removed the unused onSelect() function. Removed the override of formForEventHandlerScope(),
        replacing it with an override of virtualForm().
        * html/HTMLGenericFormElement.cpp:
        (WebCore::HTMLGenericFormElement::HTMLGenericFormElement): Use findFormAncestor
        instead of getForm.
        (WebCore::HTMLGenericFormElement::insertedIntoTree): Ditto.
        (WebCore::HTMLGenericFormElement::virtualForm): Added.

        * html/HTMLLabelElement.h: Removed now-unneeded form() and formForEventHandlerScope()
        functions, since base class behavior is now good enough. Renamed formElement() to